maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:36: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def isGridFul():Unit {
                     ^ShortestPathMaze:37: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i<-0 to getMondeLargeur;j<-0 to getMondeHauteur){
  ^ShortestPathMaze:42: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true
  ^